Fix text overflow out of div

--- a/styles/Plan.module.css
+++ b/styles/Plan.module.css
@@ -1,23 +1,26 @@
 .container {
   background-image: url('../public/assets/Plan/burn-paper.png');
   background-size: contain;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
-  display: grid;
-  height: 50rem;
+  display: flex;
+  flex-wrap: wrap;
   place-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .contentContainer {
-  padding: 0% 5% 1% 5%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2% 8% 4% 8%;
   margin: 0% 3% 0% 3%;
+  overflow: hidden;
 }
 
 .content {
   display: flex;
-  flex: auto;
   flex-wrap: wrap;
-  padding: 2.5%;
+  padding: 3%;
   text-align: center;
-  font-size: 23pt;
 }
